--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -1,12 +1,3 @@
-.stickey {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  background-color: #ffffffea;
-}
-
-.button-outline {
-  border: 5px solid #ff0000;
+.container img {
+  width: 100%;
 }
